--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "pit.h": "c",
         "mem.h": "c",
         "scheduler.h": "c",
-        "util.h": "c"
+        "util.h": "c",
+        "cstdlib": "c",
+        "mira.h": "c"
     }
 }
