GFX Pixel Functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "scheduler.h": "c",
         "util.h": "c",
         "cstdlib": "c",
-        "mira.h": "c"
+        "mira.h": "c",
+        "gfx.h": "c"
     }
 }
