--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,10 @@
         "util.h": "c",
         "cstdlib": "c",
         "mira.h": "c",
-        "gfx.h": "c"
+        "gfx.h": "c",
+        "happy.h": "c",
+        "alarm02.h": "c",
+        "theme.h": "c",
+        "desktop.h": "c"
     }
 }
