Add Keyboard & Print Scrolling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "pit.h": "c",
         "mem.h": "c",
         "scheduler.h": "c",
-        "util.h": "c"
+        "util.h": "c",
+        "keyboard.h": "c"
     }
 }
