Working Context Switching For User Mode Tasks & Code Cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "mem.h": "c",
         "scheduler.h": "c",
         "util.h": "c",
-        "keyboard.h": "c"
+        "keyboard.h": "c",
+        "gdt.h": "c"
     }
 }
