Sample User Mode REPL, Keyboard Syscall Function, & PIT Bug Fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
         "scheduler.h": "c",
         "util.h": "c",
         "keyboard.h": "c",
-        "gdt.h": "c"
+        "gdt.h": "c",
+        "random": "c",
+        "string.h": "c"
     }
 }
