--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "keyboard.h": "c",
         "gdt.h": "c",
         "random": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "desktop.h": "c"
     }
 }
