Add VESA support and graphics initialization, update paging to 4 GiB with memory management adjustments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,9 @@
         "string_view": "c",
         "initializer_list": "c",
         "stdlib.h": "c",
-        "assets.h": "c"
+        "assets.h": "c",
+        "ata.h": "c",
+        "vga.h": "c",
+        "vbe.h": "c"
     }
 }
